# scopeiq

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  PRD.md  QWEN.md  README.md  TEAM_SPLIT.md  docker-compose.prod.yml  docker-compose.yml  skills-lock.json
backend/: Dockerfile  Dockerfile.mcp  alembic.ini  debug_test.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0dd2f4ddba50_init.py  5c65bc26dc74_merge_member_a_and_b_migrations.py  9b52b52ce19a_merge_member_a_and_b_migrations.py  a5a9e876b36e_initial_schema_with_ivfflat_index.py
backend/app/: main.py
backend/app/agents/: orchestrator.py  runner.py  scraper.py  social.py  synthesizer.py
backend/app/api/: auth.py  chat.py  deps.py  projects.py  runs.py
backend/app/core/: config.py  db.py  observability.py  pricing.py  retry.py  security.py
backend/app/models/: __init__.py  chat.py  chunk.py  project.py  run.py  user.py
backend/app/rag/: chunking.py  embedding.py  index.py  retrieval.py
backend/app/schemas/: auth.py  events.py  (+3 more)
backend/evals/: dataset.jsonl  eval_report_dry-run.json  eval_report_full.json  run_eval.py
backend/mcp_server/: python_exec.py  rag_query.py  server.py
backend/prompts/: orchestrator.md  scraper.md  social.md  synthesizer.md
backend/scripts/: seed_langfuse_prompts.py
backend/tests/: conftest.py  test_auth.py  test_budget.py  test_mcp.py  test_projects.py  test_rag.py  test_retry.py  test_runs.py  test_runs_failed.py  test_runs_stream.py  test_tools_discover_urls.py  test_tools_extract_text.py  test_tools_http_fetch.py
(+53 files in other folders)
