[project]
name = "scopeiq-backend"
version = "0.1.0"
description = "ScopeIQ backend — FastAPI + agents + RAG"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Web
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    # ORM / DB
    "sqlmodel>=0.0.19",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    # Task queue
    "celery[redis]>=5.3",
    "redis>=5.0",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # Config
    "pydantic-settings>=2.2",
    # AI
    "openai>=1.30",
    "openai-agents>=0.0.5",
    "langfuse>=2.0",
    # Search / fetch
    "httpx>=0.27",
    "trafilatura>=1.9",
    "tavily-python>=0.3",
    # MCP
    "mcp>=1.0",
    # Rate limiting
    "slowapi>=0.1",
    "matplotlib>=3.10.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-passlib",
    "types-python-jose",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
